--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Flask==0.9
-Jinja2==2.6
-Werkzeug==0.8.3
-distribute==0.6.19
-dj-database-url==0.2.1
-psycopg2==2.4.5
+Flask==0.7.2
+Flask-SQLAlchemy==0.15
+SQLAlchemy==0.7.2
+Flask-WTF==0.5.2
+psycopg2==2.4.2
