--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ Jinja2==2.6
 PyGithub==1.4
 SQLAlchemy==0.7.2
 Werkzeug==0.8.3
+cssselect==0.7.1
 feedparser==5.1.2
+lxml==3.0alpha2
 psycopg2==2.4.2
 requests==0.13.5
 tweepy==1.10
