--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,15 @@ PyGithub==1.4
 SQLAlchemy==0.7.2
 Werkzeug==0.8.3
 cssselect==0.7.1
+facebook-sdk==0.4.0
 feedparser==5.1.2
+google-api-python-client==1.0
+httplib2==0.7.7
 lxml==3.0
 postmonkey==1.0a4
 psycopg2==2.4.2
+python-gflags==2.0
+python-googleanalytics==1.0.2
 requests==0.13.5
 tweepy==1.10
 newrelic
-facebook-sdk==0.4.0
