--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,5 @@ psycopg2==2.4.2
 python-gflags==2.0
 python-googleanalytics==1.0.2
 requests==0.13.5
-tweepy==2.1
+-e git+https://github.com/bear/python-twitter.git#egg=python-twitter
+
